--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -109,6 +109,7 @@
             android:layout_height="60dp"
             android:layout_margin="2dp"
             android:text="Сохранить"
+            android:onClick="saveData"
             android:textColor="@color/black"
             android:textSize="22sp" />
 
@@ -117,7 +118,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="4dp"
-            tools:listitem="@layout/person_list"/>
+            tools:listitem="@layout/list_item"/>
 
     </LinearLayout>
 
